# interex_home_loan

./: .gitignore  .replit  AIVEN_DATABASE_FIXED.md  ALL_UNICODE_FIXED.md  AUTH_COMPLETELY_FIXED.md  AUTO_REFRESH_LOOP_FIX.md  INFINITE_LOOP_FIXED.md  UNICODE_ERROR_FIXED.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start-dev.sh  tailwind.config.ts  test-login.html  vite.config.ts
backend/: create_test_user.py  diagnose_auth.py  init_db.py  requirements.txt  run.py  seed_rates.py
backend/alembic/: env.py
backend/alembic/versions/: 6da93b5a83ac_initial_schema.py  add_notification_enum_values.py  fix_notification_enum_data.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/seeds/: seed_bank_rates.py  seed_repo_rate.py
backend/app/services/: market_simulator.py  notification_service.py  report_service.py
backend/app/utils/: calculator.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: admin-layout.tsx  admin-navbar.tsx  admin-sidebar.tsx  ai-chat-widget.tsx  navbar.tsx  notifications-bell.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: pdf-export.ts  queryClient.ts  utils.ts
client/src/pages/: add-loan.tsx  admin-negotiations.tsx  admin-notifications-send.tsx  admin.tsx  calculator.tsx  chat.tsx  dashboard.tsx  landing.tsx  loan-detail.tsx  login.tsx  negotiation-detail.tsx  negotiations-new.tsx  negotiations.tsx  rates.tsx  register.tsx  reports.tsx
server/: index.ts  python-proxy.ts  routes.ts  start-python.ts
(+10 files in other folders)
